remove .DS_Store

--- a/examples/firebase/index.html
+++ b/examples/firebase/index.html
@@ -11,35 +11,7 @@
     <script type="text/javascript" src="components/angular-translate-storage-cookie/angular-translate-storage-cookie.js"></script>
     <script type="text/javascript" src="components/firebase/firebase.js"></script>
     <script type="text/javascript" src="components/angularfire/dist/angularfire.js"></script>
-    <script type="text/javascript">
-        var app = angular.module('myApp', ['ngCookies', 'pascalprecht.translate', 'firebase']);
-
-        app.config(['$translateProvider', function ($translateProvider) {
-
-            $translateProvider.preferredLanguage('tr');
-            // loader
-            $translateProvider.useLoader('firebaseLoader');
-            // remember language
-            $translateProvider.useCookieStorage();
-        }]);
-
-        app.factory('firebaseLoader', function ($http, $q, $firebase) {
-            return function (options) {
-                var ref = new Firebase("https://angularjs-bootcamp.firebaseio.com/").child(options.key);
-                var deferred = $q.defer();
-                ref.on('value', function(snapshot){
-                    deferred.resolve(snapshot.val());
-                });
-                return deferred.promise;
-            };
-        });
-
-        app.controller('langController', function ($scope, $translate, $firebase) {
-           $scope.switchLanguage = function (languageKey) {
-             $translate.use(languageKey);
-           };
-        });
-    </script>
+    <script type="text/javascript" src="scripts/app.js"></script>
 </head>
 <body ng-app="myApp">
 
